Bug 422579 - Searching for "Plasmashell" results in a query never completing
Summary: Searching for "Plasmashell" results in a query never completing
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords: regression
: 423982 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-07 13:51 UTC by Nate Graham
Modified: 2020-07-08 07:54 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The infinite plasma (1.14 MB, video/webm)
2020-06-07 13:51 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2020-06-07 13:51:22 UTC
Created attachment 129123 [details]
The infinite plasma

Everything KDE from git master with Qt 5.15 on openSUSE Tumbleweed.


STEPS TO REPRODUCE
1. Open KRunner
2. Search for "plasmashell"


Search results appear, but the spinner indicating an active runner never disappears. See attached screen recording
Comment 1 Alexander Lohnau 2020-06-13 16:40:05 UTC
Git commit 9c8d13d960d871476ed8972fc5630dfb7cfd0745 by Alexander Lohnau.
Committed on 13/06/2020 at 16:40.
Pushed by alex into branch 'master'.

Emit queryFinished when all jobs for current query have finished

M  +3    -2    src/runnermanager.cpp

https://invent.kde.org/frameworks/krunner/commit/9c8d13d960d871476ed8972fc5630dfb7cfd0745
Comment 2 Alexander Lohnau 2020-07-08 07:54:54 UTC
*** Bug 423982 has been marked as a duplicate of this bug. ***