Emit queryFinished when all jobs for current query have finished

BUG: 422579